transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-openvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission-openvpn
  template:
    metadata:
      labels:
        app: transmission-openvpn
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-basalt
      containers:
        - name: transmission-openvpn
          image: haugene/transmission-openvpn
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 9091
              protocol: TCP
          volumeMounts:
            - name: transmission-openvpn-config
              mountPath: /config
            - name: transmission-openvpn-downloads
              mountPath: /data
      volumes:
        - name: transmission-openvpn-config
          persistentVolumeClaim:
            claimName: transmission-openvpn-config
        - name: transmission-openvpn-downloads
          nfs:
            server: 192.168.1.126
            path: /mnt/user/Downloads
