transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-openvpn
spec:
  selector:
    app: transmission-openvpn
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
